--- a/Semester Project 3/nbproject/project.properties
+++ b/Semester Project 3/nbproject/project.properties
@@ -29,19 +29,19 @@ dist.jar=${dist.dir}/SemesterProjekt3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcpkix-jdk15on-1.54.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/bcpkix-jdk15on-1.54.jar
-file.reference.bcprov-jdk15on-1.54.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/bcprov-jdk15on-1.54.jar
-file.reference.commons-codec-1.9.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/commons-codec-1.9.jar
-file.reference.commons-logging-1.2.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/commons-logging-1.2.jar
-file.reference.httpclient-4.5.2.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpclient-4.5.2.jar
-file.reference.httpcore-4.4.4.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpcore-4.4.4.jar
-file.reference.httpcore-nio-4.4.4.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpcore-nio-4.4.4.jar
-file.reference.log4j-1.2.17.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/log4j-1.2.17.jar
-file.reference.opc-ua-stack-1.3.343-167.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/opc-ua-stack-1.3.343-167.jar
-file.reference.prosys-opc-ua-java-sdk-client-server-evaluation-3.1.2-488.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/prosys-opc-ua-java-sdk-client-server-evaluation-3.1.2-488.jar
+file.reference.bcpkix-jdk15on-1.54.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/bcpkix-jdk15on-1.54.jar
+file.reference.bcprov-jdk15on-1.54.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/bcprov-jdk15on-1.54.jar
+file.reference.commons-codec-1.9.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/commons-logging-1.2.jar
+file.reference.httpclient-4.5.2.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpclient-4.5.2.jar
+file.reference.httpcore-4.4.4.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpcore-4.4.4.jar
+file.reference.httpcore-nio-4.4.4.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/httpcore-nio-4.4.4.jar
+file.reference.log4j-1.2.17.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/log4j-1.2.17.jar
+file.reference.opc-ua-stack-1.3.343-167.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/opc-ua-stack-1.3.343-167.jar
+file.reference.prosys-opc-ua-java-sdk-client-server-evaluation-3.1.2-488.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/prosys-opc-ua-java-sdk-client-server-evaluation-3.1.2-488.jar
 file.reference.Semester_Project_3-src=src
-file.reference.slf4j-api-1.7.7.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/slf4j-api-1.7.7.jar
-file.reference.slf4j-log4j12-1.7.7.jar=../prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/slf4j-log4j12-1.7.7.jar
+file.reference.slf4j-api-1.7.7.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/slf4j-api-1.7.7.jar
+file.reference.slf4j-log4j12-1.7.7.jar=prosys-opc-ua-java-sdk-3.1.2-488-client-server-evaluation/lib/slf4j-log4j12-1.7.7.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
